--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Generate Prisma Client
         run: pnpm turbo db:generate
 
-      - name: Build, lint and type-check
-        run: pnpm turbo build lint type-check
+      - name: Build, lint and type-check manypkg
+        run: pnpm turbo build lint type-check mc
 
       - name: Check workspaces
         run: pnpm manypkg check
