--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "db:studio": "pnpm -F db dev",
     "dev": "turbo dev --parallel",
     "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,md,json}\" --ignore-path .gitignore",
-    "lint": "turbo lint && manypkg check",
-    "lint:fix": "turbo lint:fix && manypkg fix",
+    "lint": "turbo lint",
+    "lint:fix": "turbo lint:fix",
+    "mc": "manypkg check",
+    "mf": "manypkg fix",
     "type-check": "turbo type-check"
   },
   "dependencies": {
