--- a/turbo.json
+++ b/turbo.json
@@ -32,15 +32,19 @@
     }
   },
   "globalEnv": [
-    "CI",
+    "TURBO_TOKEN",
+    "TURBO_TEAM",
     "DATABASE_URL",
+    "NEXTAUTH_SECRET",
+    "NEXTAUTH_URL",
     "EMAIL_SERVER",
     "EMAIL_FROM",
     "DISCORD_CLIENT_ID",
     "DISCORD_CLIENT_SECRET",
+    "BROWSER",
+
+    "CI",
     "EXPO_ROUTER_APP_ROOT",
-    "NEXTAUTH_SECRET",
-    "NEXTAUTH_URL",
     "NODE_ENV",
     "SKIP_ENV_VALIDATION",
     "VERCEL",
