fix: env var of ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,6 @@ jobs:
         with:
           node-version: 18
 
-      - name: Get env output
-        run: env
-
       - name: Get pnpm store directory
         id: pnpm-cache
         run: |
@@ -53,7 +50,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install deps (with cache)
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install
 
       # Normally, this would be done as part of the turbo pipeline - however since the Expo app doesn't depend on `@acme/db` it doesn't care.
       # TODO: Free for all to find a better solution here.
