build: new dep react hook form + new next version

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -24,9 +24,10 @@
     "@trpc/next": "^10.34.0",
     "@trpc/react-query": "^10.34.0",
     "@trpc/server": "^10.34.0",
-    "next": "^13.4.10",
+    "next": "^13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "superjson": "1.9.1",
     "zod": "^3.21.4"
   },
