--- a/.env.example
+++ b/.env.example
@@ -15,14 +15,9 @@ NEXTAUTH_URL=
 # @see https://next-auth.js.org/configuration/options#secret
 NEXTAUTH_SECRET=
 
-# Preconfigured Discord OAuth provider, works out-of-the-box
+# Preconfigured Email OAuth provider, works out-of-the-box
 # @see https://next-auth.js.org/providers/email
 EMAIL_SERVER=
 EMAIL_FROM=
-
-# Preconfigured Discord OAuth provider, works out-of-the-box
-# @see https://next-auth.js.org/providers/discord
-DISCORD_CLIENT_ID=
-DISCORD_CLIENT_SECRET=
 
 BROWSER=
