--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/nextjs",
+  "name": "@bidecor/nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,9 +13,9 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@acme/api": "^0.1.0",
-    "@acme/auth": "^0.1.0",
-    "@acme/db": "^0.1.0",
+    "@bidecor/api": "^0.1.0",
+    "@bidecor/auth": "^0.1.0",
+    "@bidecor/db": "^0.1.0",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.29.23",
     "@tanstack/react-query-devtools": "^4.29.23",
@@ -32,8 +32,8 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@acme/eslint-config": "^0.2.0",
-    "@acme/tailwind-config": "^0.1.0",
+    "@bidecor/eslint-config": "^0.2.0",
+    "@bidecor/tailwind-config": "^0.1.0",
     "@types/node": "^18.16.19",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -47,9 +47,9 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@acme/eslint-config/base",
-      "@acme/eslint-config/nextjs",
-      "@acme/eslint-config/react"
+      "@bidecor/eslint-config/base",
+      "@bidecor/eslint-config/nextjs",
+      "@bidecor/eslint-config/react"
     ]
   }
 }
