--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/auth",
+  "name": "@bidecor/auth",
   "version": "0.1.0",
   "main": "./index.ts",
   "types": "./index.ts",
@@ -11,7 +11,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@acme/db": "^0.1.0",
+    "@bidecor/db": "^0.1.0",
     "@auth/core": "^0.9.0",
     "@auth/prisma-adapter": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.6.0",
@@ -23,7 +23,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@acme/eslint-config": "^0.2.0",
+    "@bidecor/eslint-config": "^0.2.0",
     "@types/nodemailer": "^6.4.8",
     "eslint": "^8.45.0",
     "typescript": "^5.1.6"
@@ -31,7 +31,7 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@acme/eslint-config/base"
+      "@bidecor/eslint-config/base"
     ]
   }
 }
